added customer class

--- a/BedrockBank/BedrockBank.csproj
+++ b/BedrockBank/BedrockBank.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Account.cs" />
     <Compile Include="Bank.cs" />
     <Compile Include="bankModel.cs" />
+    <Compile Include="bankmodels.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
